Fixed issue regarding getLastMethod(). Load has a 50% chance of working correctly